# rust-workspace-linking

./: Cargo.toml  README.md
calc_test_a/: Cargo.toml  build.rs
calc_test_a/src/: lib.rs
calc_test_a/src/calculation/: mod.rs
calc_test_a/src/test/: ex_test.rs
clib/: build.sh
clib/src/: test_utils.c
ctest/: build.sh
ctest/src/: main.c
test_handler/: Cargo.toml  build.rs
test_handler/src/: lib.rs  test_lib.rs  test_persist.rs
