cargo-features = ["per-package-target", "profile-rustflags"]

[workspace]
resolver = "2"
members = [
    "test_handler",
    "library",
    "calc_test_a"
]

[profile.dev]
rustflags = ["-C", "link-arg=-L./clib/target/a/"]

[profile.test_handler]
inherits = "release"
rustflags = ["-C", "link-arg=-L./target/release/"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*