cargo-features = ["per-package-target", "profile-rustflags"]

[package]
name = "calc_test_a"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.dev]
rustflags = ["-C", "link-arg=-L../clib/target/a/"]

[dependencies]
libc = "0.2"
lata_core_lib = { path = "../library" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.65.1"
cbindgen = "0.24.5"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*