cargo-features = ["per-package-target", "profile-rustflags"]

[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
bindgen = "0.65.1"
cbindgen = "0.24.5"